--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
-  <!DOCTYPE html>
+ <!DOCTYPE html>
     <html>
     <head>
-      <title>Análisis Estadístico - JPD Guaymallén Este</title>
+      <title>Análisis Estadístico - JPD Guaymallén Oeste</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
@@ -152,7 +152,7 @@
     </head>
     <body>
       <div class="container">
-        <h1>Análisis Estadístico - JPD Guaymallén Este</h1>
+        <h1>Análisis Estadístico - JPD Guaymallén Oeste</h1>
         <h2>📅 COMPARATIVA DEL PERÍODO</h2>
         <p class="date-range">SEMANAL del 3/11/2025 al 9/11/2025 Vs. SEMANAL del 10/11/2025 al 17/11/2025</p>
         
